fix mobile spacing

--- a/queries.css
+++ b/queries.css
@@ -38,12 +38,11 @@
 }
 
 @media screen and (max-width: 600px) {
-  .container {
-    width: 100%;
+  body {
+    padding: 30px 0;
   }
 
-  body {
-    margin: 20px 0;
-    height: auto;
+  .container {
+    width: 100%;
   }
 }
