--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,13 @@ body {
   font-family: 'Montserrat', sans-serif;
   width: 100%;
   margin: 0;
-  padding: 0;
-  height: 100vh;
   background: var(--secondary-color);
 }
 
 .wrapper {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   padding: 0 30px;
